--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet'/>
 
+<!-- Gmaps -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD77t-b3JKYMdQ76WIIlB4Mz2dEvHFOOFk"></script>
+
+
  <!--Flutter WebGL 2.0 fix (https://github.com/flutter/flutter/issues/89655)-->
 <script type="text/javascript">
   HTMLCanvasElement.prototype.getContext = function (orig) {
@@ -65,7 +69,7 @@
      application. For more information, see:
      https://developers.google.com/web/fundamentals/primers/service-workers-->
 <script>
-    var serviceWorkerVersion = '1127385912';
+    var serviceWorkerVersion = '448200080';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
