--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
 <!-- Gmaps -->
-<script src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_API"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=$GOOGLE_API"></script>
 
 
  <!--Flutter WebGL 2.0 fix (https://github.com/flutter/flutter/issues/89655)-->
@@ -66,7 +66,7 @@
      application. For more information, see:
      https://developers.google.com/web/fundamentals/primers/service-workers-->
 <script>
-    var serviceWorkerVersion = '1674390878';
+    var serviceWorkerVersion = '1611813223';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
