--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta http-equiv="refresh" content="1; URL=/login" />
+      <meta http-equiv="refresh" content="1; URL=/home" />
   </head>
 </html>
